--- a/views/index.pug
+++ b/views/index.pug
@@ -8,6 +8,8 @@ html(lang="en")
   body
     h1 Hello
     h2 Some
-    ul
-      each user in users
-        li=user
+    if !isAuth
+      a(href="/login") Login
+    else
+      a(href="/logout") Logout
+    p= isAuth
